updated page header, create article get handler

--- a/content/partials/index.html
+++ b/content/partials/index.html
@@ -5,6 +5,7 @@
   <title>The ANGELOV BLOG</title>
 </head>
 <body>
+  <h1>The NANGELOV BLOG</h1>
   <h2>#</h2>
   <span><a href="/">Home</a></span>
   <span><a href="/create">Create new article</a></span>
