--- a/content/partials/create.html
+++ b/content/partials/create.html
@@ -1,4 +1,4 @@
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
   <input type="text" name="title" placeholder="Title" required="required">
   <br />
   <textarea name="description" placeholder="Description" required=required cols="22"></textarea>
