add comment functionality

--- a/content/partials/details.html
+++ b/content/partials/details.html
@@ -16,9 +16,9 @@
 #
 <h3>Leave comment</h3>
 <form action="/details/#/comments" method="POST">
-  <input type="text" name="comment-user" required="required" placeholder="Enter username" />
+  <input type="text" name="user" required="required" placeholder="Enter username" />
   <br />
-  <textarea name="comment" placeholder="Enter comment" required="required" cols="22"></textarea>
+  <textarea name="text" placeholder="Enter comment" required="required" cols="22"></textarea>
   <br />
   <input type="submit">
 </form>
