add image to article functionality

--- a/content/partials/create.html
+++ b/content/partials/create.html
@@ -3,5 +3,7 @@
   <br />
   <textarea name="description" placeholder="Description" required=required cols="22"></textarea>
   <br />
+  <input type="file" name="image">
+  <br />
   <input type="submit" value="Add article">
 </form>
